--- a/TP1_memoryGame/app/src/main/res/layout/activity_main.xml
+++ b/TP1_memoryGame/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,46 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
+        android:id="@+id/gameBtnLinearLayout">
+
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:id="@+id/btnTwoPlayers"
+            android:text="@string/btnTwoPlayers_text"
+            android:layout_margin="40dp"
+            android:layout_weight="2"
+            />
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnWithTablet"
+            android:layout_margin="40dp"
+            android:text="@string/btnWithTablet_text"/>
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnScores"
+            android:layout_margin="40dp"
+            android:text="@string/btnScores_text"/>
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnExit"
+            android:layout_margin="40dp"
+            android:text="@string/btnExit_text"/>
+        </LinearLayout>
 
 </RelativeLayout>
