--- a/TP1_memoryGame/app/src/main/res/layout/dialog_playersetting.xml
+++ b/TP1_memoryGame/app/src/main/res/layout/dialog_playersetting.xml
@@ -6,6 +6,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:id="@+id/playerNameTextView1"
         android:text="@string/onePlayerName"/>
     <EditText
@@ -21,6 +22,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:id="@+id/playerNameTextView2"
         android:text="@string/anotherPlayerName"
         android:paddingTop="40dp"/>
@@ -34,5 +36,10 @@
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
         android:hint="@string/player_name" />
+    <Button
+        android:id="@+id/btnGameStart"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/ok"/>
 
 </LinearLayout>
