--- a/TP1_memoryGame/app/src/main/res/layout/popup_bestscores.xml
+++ b/TP1_memoryGame/app/src/main/res/layout/popup_bestscores.xml
@@ -4,6 +4,9 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#ffffff"
+    android:id="@+id/layout_score"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     >
     <Button
         android:id="@+id/btn_dismiss"
