--- a/TP1_memoryGame/app/src/main/res/layout/activity_game.xml
+++ b/TP1_memoryGame/app/src/main/res/layout/activity_game.xml
@@ -21,10 +21,15 @@
             android:text="Medium Text"
             android:id="@+id/scorePlayer1"
             android:background="@drawable/textviewborder"
-            android:padding="8dp"
-            android:layout_weight="9"
+            android:padding="10dp"
             android:layout_marginLeft="15dp"
-            android:layout_gravity="left" />
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="9"
+            android:layout_gravity="left"
+            android:gravity="center"
+            android:minWidth="100dp"/>
 
         <TableLayout
             android:layout_width="match_parent"
@@ -32,6 +37,7 @@
             android:layout_gravity="center_horizontal"
             android:id="@+id/gameViewTable"
             android:layout_weight="2"
+            android:layout_margin="15dp"
             ></TableLayout>
 
         <TextView
@@ -41,10 +47,15 @@
             android:text="Medium Text"
             android:id="@+id/scorePlayer2"
             android:background="@drawable/textviewborder"
-            android:padding="8dp"
-            android:layout_weight="9"
+            android:padding="10dp"
+            android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:layout_gravity="right" />
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="9"
+            android:layout_gravity="right"
+            android:gravity="center"
+            android:minWidth="100dp"/>
 
     </LinearLayout>
 </RelativeLayout>
