--- a/TP2_LocalisationMap/app/src/main/res/layout/activity_menu.xml
+++ b/TP2_LocalisationMap/app/src/main/res/layout/activity_menu.xml
@@ -4,6 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@drawable/room"
     tools:context="com.polymtl.jiajing.tp2_localisationmap.MenuActivity">
 
     <LinearLayout
@@ -26,8 +27,9 @@
             android:layout_marginTop="20dp"
             android:layout_weight="2" />
         <RadioGroup
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/radioGroupMode"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
             android:layout_marginBottom="20dp"
@@ -39,6 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
+                android:checked="true"
                 android:text="@string/GPS"/>
             <RadioButton
                 android:id="@+id/radioBtnNetwork"
@@ -46,6 +49,26 @@
                 android:layout_height="wrap_content"
                 android:text="@string/network"/>
         </RadioGroup>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/frequency"
+            android:id="@+id/textViewFrequency"
+            android:layout_marginTop="20dp"
+            android:layout_weight="2" />
+
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBarFrequency"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+
+            android:layout_weight="2"
+            android:max="300"
+            android:progress="30" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -62,26 +85,16 @@
             android:id="@+id/seekBarZoom"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
-            android:layout_marginBottom="20dp"
-            android:layout_weight="2" />
 
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/btnStart"
-            android:text="@string/start"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
             android:layout_weight="2"
-            android:textStyle="bold"/>
+            android:max="24"
+            android:progress="17" />
 
         <Button
             android:layout_width="fill_parent"
             android:layout_height="50dp"
-            android:id="@+id/btnItineraryHistory"
-            android:text="@string/itineraryHistory"
+            android:id="@+id/btnOpenMap"
+            android:text="@string/openmap"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:layout_marginLeft="40dp"
@@ -100,6 +113,18 @@
             android:layout_marginRight="40dp"
             android:layout_weight="2"
             android:textStyle="bold"/>
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:id="@+id/btnItineraryHistory"
+            android:text="@string/exit"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_weight="2"
+            android:textStyle="bold"/>
+
 
     </LinearLayout>
 
