No hunk header could be found for a selected line.

--- a/TP2_LocalisationMap/app/src/main/res/values/styles.xml
+++ b/TP2_LocalisationMap/app/src/main/res/values/styles.xml
@@ -5,4 +5,8 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="PopupAnimation" parent="android:Animation" mce_bogus="1">
+        <item name="android:windowEnterAnimation">@anim/up</item>
+        <item name="android:windowExitAnimation">@anim/down</item>
+    </style>
 </resources>
