--- a/TP2_LocalisationMap/app/src/main/res/layout/popup_destination.xml
+++ b/TP2_LocalisationMap/app/src/main/res/layout/popup_destination.xml
@@ -1,23 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/setdestination"
+        android:id="@+id/textViewTo"
+        android:layout_marginTop="20dp" />
+
     <EditText
-        android:id="@+id/destinationEdit"
-        android:inputType="textCapCharacters"
+        android:id="@+id/to"
         android:layout_width="match_parent"
-        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginBottom="4dp"
-        android:hint="@string/setdestination" />
+        android:layout_marginBottom="4dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/setfrom"
+        android:id="@+id/textViewFrom"
+        android:layout_marginTop="20dp" />
+
+    <EditText
+        android:id="@+id/from"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="4dp" />
 
     <ImageButton
-        android:layout_width="match_parent"
-        android:layout_weight="4"
+        android:layout_width="50dp"
         android:layout_height="50dp"
         android:id="@+id/btn_searchDestination"
         android:background="@drawable/search"/>
