--- a/TP2_LocalisationMap/app/src/main/res/layout/marker.xml
+++ b/TP2_LocalisationMap/app/src/main/res/layout/marker.xml
@@ -18,6 +18,11 @@
         android:orientation="vertical" >
 
         <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center" />
+        <TextView
             android:id="@+id/info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
