--- a/TP2_LocalisationMap/app/src/release/res/values/google_maps_api.xml
+++ b/TP2_LocalisationMap/app/src/release/res/values/google_maps_api.xml
@@ -14,6 +14,8 @@ https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend
     string in this file.
     --></string>
 
-    <string name="google_maps_key" templateMergeStrategy="preserve">YOUR_KEY_HERE</string>
+    <!--<string name="google_maps_key" templateMergeStrategy="preserve">YOUR_KEY_HERE</string>-->
+    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyCl11YIJh3prbGansw-HLLhRZKBAvLHvhw</string>
+
 
 </resources>
