--- a/TP2_LocalisationMap/app/src/main/res/layout/marker.xml
+++ b/TP2_LocalisationMap/app/src/main/res/layout/marker.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/picture"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginRight="5dp"
         android:adjustViewBounds="true" >
     </ImageView>
@@ -26,7 +26,7 @@
             android:id="@+id/info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center" />
+            android:gravity="left" />
     </LinearLayout>
 
 </LinearLayout>
