--- a/TP2_LocalisationMap/app/src/debug/res/values/google_maps_api.xml
+++ b/TP2_LocalisationMap/app/src/debug/res/values/google_maps_api.xml
@@ -14,7 +14,7 @@ https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend
     string in this file.
     --></string>
 
-    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyCl11YIJh3prbGansw-HLLhRZKBAvLHvhw</string>
-    <!--<string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyAiL0mG00Fzz99VwUScLzbHradll-???-mEy0</string>-->
+    <!--<string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyCl11YIJh3prbGansw-HLLhRZKBAvLHvhw</string>-->
+    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyAiL0mG00Fzz99VwUScLzbHradll--mEy0</string>
 
 </resources>
